--- a/workspace_teamproject/mypage/mypage/src/main/webapp/productionplan/production_plan_management.html
+++ b/workspace_teamproject/mypage/mypage/src/main/webapp/productionplan/production_plan_management.html
@@ -66,7 +66,8 @@
     #btn_add,
     #btn_modify,
     #btn_delete,
-    #btn_save {
+    #btn_save,
+    #btn_plancode {
         background-color: #3498db;
         border: 0px;
         border-radius: 5px;
@@ -83,7 +84,8 @@
     #btn_add:active,
     #btn_modify:active,
     #btn_delete:active,
-    #btn_save:active {
+    #btn_save:active,
+    #btn_plancode:active {
         background-color: #346edb;
     }
 
@@ -149,6 +151,7 @@
                 <!-- 버튼 div -->
                 <div id="btn_wrap_div">
                     <button type="button" id="btn_auto">계획자동생성</button>
+                    <button type="button" id="btn_plancode">계획코드부여</button>
                     <button type="button" id="btn_add">추가</button>
                     <button type="button" id="btn_modify">수정</button>
                     <button type="button" id="btn_delete">삭제</button>
