--- a/workspace_teamproject/mypage/mypage/src/main/webapp/productionplan/process_order_plan.html
+++ b/workspace_teamproject/mypage/mypage/src/main/webapp/productionplan/process_order_plan.html
@@ -219,7 +219,7 @@
         makeMenu("생산지시<br>불러오기", "get_order");
         makeMenu("공정계획<br>자동생성", "create_order");
         makeMenu("라인 자동분배", "line_autoset");
-        makeMenu("계획코드부여", "set_plan_code");
+        makeMenu("계획코드부여", "set_");
         
         makeTable(1, "#plan_table_thead", 1, 9, "#plan_table_tbody", 20);
         makeColName(1);
